# code-samples

./: README.md  test_task_911.py  test_task_911_2.py
test-task-224/: .editorconfig  .env.example  .gitlab-ci.yml  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  worker.py
test-task-224/.github/workflows/: deploy-dev.yaml  format.yaml
test-task-224/migrations/: env.py
test-task-224/sql_data/: balances_202406052233.sql  transactions_202406052233.sql  users_202406052233.sql
test-task-224/src/: config.py  models.py
test-task-224/src/app/auth/: models.py  views.py
test-task-224/src/app/balance/: controllers.py  enums.py  models.py  schemas.py  views.py
test-task-224/src/app/core/: controller.py  exceptions.py  middlewares.py  protocol.py  views.py
test-task-224/src/app/healthcheck/: views.py
test-task-224/src/auth/: manager.py
test-task-224/src/db/: base.py  connection.py
test-task-224/src/redis/: __init__.py
test-task-224/src/tests/: base.py  conftest.py  test_auth.py  test_transactions.py
test-task-224/src/tests/factories/: user.py
test-task-332/: README.md  main.py
test-task-332/src/: calculator.py  candle_api.py  exceptions.py  response_handler.py  schemas.py
